--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -30,7 +30,9 @@ stages:
         repository: 'custom1nov10'
         command: 'buildAndPush'
         Dockerfile: '**/Dockerfile'
-        tags: '$(tag)'
+        tags: |
+          $(tag)
+          $(Build.SourceVersion)
 ## Publish Artifacts pipeline code in addition to Build and Push          
     - bash: echo Contents in System Default Working Directory; ls -R $(System.DefaultWorkingDirectory)        
     - bash: echo Before copying Contents in Build Artifact Directory; ls -R $(Build.ArtifactStagingDirectory)        
